# Codex7-Agent

./: .gitignore  README.md  codex7_config.json.example  pyproject.toml  test_setup.sh
src/codex7_agent/: __init__.py  __main__.py
src/codex7_agent/agent/: __init__.py  context_manager.py  loop.py  orchestrator.py  state_manager.py
src/codex7_agent/config/: __init__.py  config_manager.py
src/codex7_agent/llm/: __init__.py  client.py
src/codex7_agent/prompt/: __init__.py  prompt_generator.py
src/codex7_agent/tools/: __init__.py  base.py  bash_tool.py  ckg_tool.py  edit_tool.py  json_edit_tool.py  run.py  sequential_thinking_tool.py  task_done_tool.py  task_tool.py  tool_adapter.py  tool_manager.py
src/codex7_agent/tools/ckg/: base.py  ckg_database.py
src/codex7_agent/utils/: __init__.py  intent_recognition.py  ollama_client.py  openai_client.py  openrouter_client.py
src/evaluation/: CodeXGLUE.py  CodeXGLUE.sh  README.md  da-code.py  da-code.sh  swebench.py  swebench_setup.sh
src/retrieval/: README.md  __init__.py  config.py  config_examples.md  embedding_config.json.example  factory.py  indexer.py  requirements.txt
src/retrieval/embedding/: __init__.py  embeddings.py  milvus_store.py  models.py
src/retrieval/embedding/providers/: base.py  factory.py  huggingface.py  ollama.py  openai.py
src/retrieval/graph/: __init__.py  models.py  neo4j_store.py
src/retrieval/parser/: __init__.py  ast_parser.py  entities.py  visitor.py
src/tests/: run_tests.sh  test_retrieval_e2e.py  test_swebench_agent.py  validate_retrieval.py
