[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex7-agent"
version = "1.0.0"
description = "Codex7 agent for SWE-bench evaluation"
authors = [{name = "Codex7 Team"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "docker>=6.0.0",
    "datasets>=2.0.0",
    "tqdm>=4.64.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "neo4j>=5.0.0",
    "pymilvus>=2.3.0",
    "sentence-transformers>=2.0.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
    "tree-sitter-java>=0.20.0",
    "tree-sitter-go>=0.20.0",
    "tree-sitter-rust>=0.20.0",
    "tree-sitter-c>=0.20.0",
    "tree-sitter-cpp>=0.20.0",
]

[project.scripts]
codex7-agent = "codex7_agent.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"